--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "antd": "^5.27.6",
+    "axios": "^1.13.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
