--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -5,6 +5,7 @@
 /.pnp
 /dist
 .pnp.js
+.env
 
 # testing
 /coverage
@@ -14,7 +15,7 @@
 
 # misc
 .DS_Store
-.env.local
+.env
 .env.development.local
 .env.test.local
 .env.production.local
